[gd_scene load_steps=9 format=2]

[ext_resource path="res://enemy/bat/bat.png" type="Texture" id=1]
[ext_resource path="res://enemy/bat/bat_hang.png" type="Texture" id=2]
[ext_resource path="res://enemy/bat/bat_fly.png" type="Texture" id=3]
[ext_resource path="res://enemy/bat/bat_dead.png" type="Texture" id=4]
[ext_resource path="res://Bat.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "bat dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "bat fly",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "bat_hanging",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.5714, 17.1429 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 18 )

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 35
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.137255, 0.686275, 0.905882, 1 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 1 )
animation = "bat fly"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 2 )

[node name="WallChecker" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 40 )
collision_mask = 2

[node name="SideChecker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideChecker"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[connection signal="body_entered" from="SideChecker" to="." method="_on_SideChecker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
